--- a/css1/estilos.css
+++ b/css1/estilos.css
@@ -3,7 +3,7 @@ body{
 }
 /******************<NAVBAR>**************/
 .navbar{
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 3;
 }
 
@@ -48,8 +48,8 @@ div ul li a:hover, .navbar-brand:hover{
 }
 
 .producto{
-  border:1px solid black;
-  background-color: rgba(255,255,255,0.8);
+  border:1px solid 1px solid rgba(100,100,100,0.2);
+  background-color: white;
   padding:1%;
 }
 
