--- a/css1/estilos.css
+++ b/css1/estilos.css
@@ -1,6 +1,15 @@
 body{
   background-image: url(../images/background.png);
 }
+
+/******************<color al seleccionar texto>**************/
+::-moz-selection { /* Code for Firefox */
+    background: rgba(0, 0, 0, 0.4);
+}
+
+::selection {
+    background: rgba(0, 100, 0, 0.4);
+}
 /******************<NAVBAR>**************/
 .navbar{
   background-color: rgba(0, 0, 0, 0.4);
@@ -16,7 +25,7 @@ body{
 }
 
 a{
-  color:white;
+  color:black;
   text-decoration: none;
 }
 
@@ -30,9 +39,8 @@ div ul li a:hover, .navbar-brand:hover{
   margin-top: 3%;
 }
 .jumbotron{
-  background-color: rgba(255, 255, 255, 0.5);
   background-color: rgba(39, 174, 96, 0.7);
-  color:rgba(189, 195, 199,1.0);
+  color:rgb(19, 90, 28);
 }
 
 .fondo-azul{
@@ -48,7 +56,7 @@ div ul li a:hover, .navbar-brand:hover{
 }
 
 .producto{
-  border:1px solid 1px solid rgba(100,100,100,0.2);
+  border:1px solid rgba(100,100,100,0.2);
   background-color: white;
   padding:1%;
 }
@@ -70,8 +78,8 @@ div ul li a:hover, .navbar-brand:hover{
 
 /******************<FOOTER>**************/
 .footer{
-  background-color: rgba(255, 255, 255, 0.2);
-  color: white;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: black;
   padding:3%;
 }
 
@@ -87,7 +95,7 @@ div .comentario {
 }
 
 .fondoregistracion {
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255,255,255,0.2);
   padding: inherit;
   margin-bottom: 2%;
 }
