--- a/css1/estilos.css
+++ b/css1/estilos.css
@@ -1,127 +1,156 @@
-body{
-  background-image: url(../images/background.png);
-}
+/****************<GENERAL>************/
+    body
+        {
+            background-image: url(../images/background.png);
+        }
 
-/******************<color al seleccionar texto>**************/
-::-moz-selection { /* Code for Firefox */
-    background: rgba(0, 0, 0, 0.4);
-}
+    label
+        {
+            text-align: right;
+            margin-left: 3%;
+        }
 
-::selection {
-    background: rgba(0, 100, 0, 0.4);
-}
+    input
+        {
+            border-radius: 5px;
+            border: 1px solid #CED5D7;
+            background-color: white;
+            box-shadow: 1px 0px 3px #B5C1C5;
+            margin-left: 10 px;
+            font-size: 15px;
+        }
+
+    input:focus
+        {
+            background-color: ;
+        }
+
+    textarea
+        {
+            resize: vertical;
+        }
+/****************<GENERAL>************/
+
+/******<color al seleccionar texto>******/
+    ::-moz-selection
+        { /* Code for Firefox */
+            background: rgba(0, 0, 0, 0.4);
+        }
+
+    ::selection
+        {
+            background: rgba(0, 100, 0, 0.4);
+        }
+/******<color al seleccionar texto>******/
+
 /******************<NAVBAR>**************/
-.navbar{
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 3;
-}
+    .navbar
+        {
+            background-color: rgba(0, 0, 0, 0.4);
+            z-index: 3;
+        }
 
-.navbar-brand{
-  color: white;
-}
+    .navbar-brand
+        {
+            color: white;
+        }
 
-.navbar-brand{
-  color: white;
-}
+    .navbar-brand
+        {
+            color: white;
+        }
 
-a{
-  color:black;
-  text-decoration: none;
-}
+    a
+        {
+            color:black;
+            text-decoration: none;
+        }
 
-div ul li a:hover, .navbar-brand:hover{
-  color:rgba(22, 160, 133,1.0);
-}
+    div ul li a:hover, .navbar-brand:hover
+        {
+            color:rgba(22, 160, 133,1.0);
+        }
 /******************</NAVBAR>**************/
 
 /******************<PAGINA>**************/
-.main-header{
-  margin-top: 3%;
-}
-.jumbotron{
-  background-color: rgba(39, 174, 96, 0.7);
-  color:rgb(19, 90, 28);
-}
+    .main-header
+        {
+            margin-top: 3%;
+        }
 
-.producto{
-  border:1px solid rgba(100,100,100,0.2);
-  background-color: white;
-  padding:1%;
-}
+    .jumbotron
+        {
+            background-color: rgba(39, 174, 96, 0.7);
+            color:rgb(19, 90, 28);
+        }
 
-.imgProducto{
-  margin: 0 20%;
-}
+    .producto
+        {
+            border:1px solid rgba(100,100,100,0.2);
+            background-color: white;
+            padding:1%;
+        }
 
-.tituloProducto{
-  text-align: center;
-}
-.vermas{
-  padding: 1%;
-  background-color: rgba(46, 204, 113,1.0);
-  z-index: 4;
-  top: -10px;
-}
+    .imgProducto
+        {
+            margin: 0 20%;
+        }
+
+    .tituloProducto
+        {
+            text-align: center;
+        }
+
+    .vermas
+        {
+            padding: 1%;
+            background-color: rgba(46, 204, 113,1.0);
+            z-index: 4;
+            top: -10px;
+        }
 /******************<PAGINA>**************/
 
 /******************<FOOTER>**************/
-.footer{
-  background-color: rgba(0, 0, 0, 0.4);
-  color: black;
-  padding:3%;
-  border-top-left-radius: 2em;
-  border-top-right-radius: 2em;
-}
+    .footer
+        {
+            background-color: rgba(0, 0, 0, 0.4);
+            color: black;
+            padding:3%;
+            border-top-left-radius: 2em;
+            border-top-right-radius: 2em;
+        }
 
-footer p{
-  margin:0;
-}
+    footer p
+        {
+            margin:0;
+        }
 /******************<FOOTER>**************/
 
 /******************<REGISTRO>************/
-div .comentario {
-  font-size:10px;
-  margin-left: 4%;
-}
+    div .comentario
+        {
+            font-size:10px;
+            margin-left: 4%;
+        }
 
-.fondoregistracion {
-  background-color: rgba(255,255,255,0.2);
-  padding: inherit;
-  margin-bottom: 2%;
-}
-/******************<FAQ's>************/
-.faq-container{
-  list-style: none;
-  padding-left: 25px;
-  margin-bottom: 2%;
-
-
-}
-.faq-container a{
-  color: black;
-
-}
-
-/******************<FAQ's>************/
-label   {
-  text-align: right;
-  margin-left: 3%;
-}
-
-input {
-  border-radius: 5px;
-  border: 1px solid #CED5D7;
-  background-color: white;
-  box-shadow: 1px 0px 3px #B5C1C5;
-  margin-left: 10 px;
-  font-size: 15px;
-}
-
-input:focus {
-  background-color: ;
-}
-
-textarea {
-  resize: vertical;
-}
+    .fondoregistracion
+        {
+            background-color: rgba(255,255,255,0.2);
+            padding: inherit;
+            margin-bottom: 2%;
+        }
 /******************<REGISTRO>************/
+
+/******************<FAQ's>************/
+    .faq-container
+        {
+            list-style: none;
+            padding-left: 25px;
+            margin-bottom: 2%;
+        }
+
+    .faq-container a
+        {
+            color: black;
+        }
+/******************<FAQ's>************/
